Fix apostrophies and image scale issues on safari

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,13 +18,12 @@
    }
 
    .about-the-author img, .dedes-pet-shop img, .papas-pool img {
+      object-fit:cover;
       width:100%;
       height:auto;
-      max-width:500px;
    }
 
    .about-the-author img {
       width:80%;
-      max-width:400px;
    }
 }
